Add event listener for clicks on tiles, implement tile reveal with recursive flood fill, and reveal mines on game over

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,14 @@ header {
     cursor: pointer;
 }
 
+.revealed {
+    background-color: darkgray;
+}
+
+.mine {
+    background-color: red;
+}
+
 #game-info {
     display: flex;
     flex-direction: row;
