--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+h1 {
+    font-size: 8vw;
+}
+
 body {
     background-color: rgb(99, 87, 87);
 }
@@ -12,7 +16,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80%;
 }
 
 header {
@@ -38,12 +41,11 @@ header {
     cursor: pointer;
 }
 
-.revealed {
-    background-color: darkgray;
-}
-
 .mine {
-    background-image: url("https://pngimg.com/uploads/bomb/bomb_PNG21.png");
+    background-image: url("../images/bomb.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     background-color: red;
 }
 
@@ -60,7 +62,49 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 1vh solid #201f21;
+    border-radius: 1%;
+}
+
+@media (orientation: landscape) {
+    #game-board {
+        width: 80vh;
+        height: 80vh;
+    }
+}
+
+@media (orientation: portrait) {
+    #game-board {
+        width: 80vw;
+        height: 80vw;
+    }
+}
+
+#game-over {
+    display: none;
     width: 80vh;
     height: 80vh;
-    border: 1vh solid #201f21;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+#game-over-message {
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    color: white;
+    font-size: 2rem;
+}
+
+#final-score {
+    color: antiquewhite;
+}
+
+main button {
+    background-color: blue;
+}
+
+button:hover {
+    background-color: bisque;
 }
