--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 h1 {
-    font-size: 8vw;
+    font-size: 6vw;
 }
 
 body {
@@ -50,7 +50,7 @@ header {
 }
 
 #game-info {
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -58,7 +58,7 @@ header {
 }
 
 #game-board {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -78,6 +78,58 @@ header {
         width: 80vw;
         height: 80vw;
     }
+}
+#instructions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80vw;
+    height: 80vh;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid #201f21;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+p {
+    font-size: 1.2rem;
+}
+
+#start-game {
+    padding: 10px 20px;
+    background-color: blue;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#start-game:hover {
+    background-color: darkblue;
+}
+
+#level-selector {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+}
+
+#level-selector button {
+    margin: 10px;
+    padding: 10px 20px;
+    background-color: blue;
+    color: white;
+    cursor: pointer;
 }
 
 #game-over {
@@ -106,5 +158,9 @@ main button {
 }
 
 button:hover {
-    background-color: bisque;
+    background-color: lightblue;
+}
+
+#instructions{
+    display: flex;
 }
